--- a/analysis/welde/data-cleaning.ipynb
+++ b/analysis/welde/data-cleaning.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "baebe4d3",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
        "(11514, 19)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,8 +261,7 @@
     "for col in obj_cols:\n",
     "    df_clean[col] = (\n",
     "        df_clean[col]\n",
-    "        .astype(str)\n",
-    "        .str.strip()                    # \" I love python \" -> \"I love python\"\n",
+    "        .astype(str)   \n",
     "        .replace({\"\": np.nan,           # empty string -> NaN\n",
     "                  \"nan\": np.nan,\n",
     "                  \"None\": np.nan})\n",
@@ -341,9 +340,6 @@
     "\n",
     "# Result shape check\n",
     "df_no_outliers.shape\n",
-    "\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
@@ -365,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "e1e92cff",
    "metadata": {},
    "outputs": [
@@ -384,7 +380,7 @@
          "type": "integer"
         }
        ],
-       "ref": "b3358ce6-51f5-47c1-9c1d-5c59349222fe",
+       "ref": "13a203dd-c224-4da5-a63e-e083bd59b0c6",
        "rows": [
         [
          "state_mapped",
@@ -481,7 +477,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "6058ebb0",
    "metadata": {},
    "outputs": [
@@ -536,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "72033a0c",
    "metadata": {},
    "outputs": [
@@ -554,7 +550,7 @@
    "source": [
     "# boxplots\n",
     "sns.boxplot(x=df_clean[\"living_area\"])\n",
-    "plt.xlim(0, 400)  # hide insane outliers for clarity\n",
+    "plt.xlim(0, 400)  # hide big outliers for clarity\n",
     "plt.title(\"Living Area Outliers\")\n",
     "plt.show()\n",
     "\n",
@@ -587,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1817f503",
    "metadata": {},
    "outputs": [
@@ -622,7 +618,7 @@
     "ax = sns.barplot(\n",
     "    x=corr_with_price.values,\n",
     "    y=corr_with_price.index,\n",
-    "    hue=corr_with_price.index,   # fix\n",
+    "    hue=corr_with_price.index,   \n",
     "    palette=\"coolwarm\",\n",
     "    dodge=False,\n",
     "    legend=False\n",
@@ -679,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "aa338c9e",
    "metadata": {},
    "outputs": [
@@ -848,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "78517c22",
    "metadata": {},
    "outputs": [
@@ -1063,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "ff41b950",
    "metadata": {},
    "outputs": [
@@ -1136,7 +1132,7 @@
     "\n",
     "\n",
     "\n",
-    "# Mapping provinces → region colors\n",
+    "# Mapping provinces \n",
     "region_color_map = {\n",
     "    \"Flanders\": \"gold\",\n",
     "    \"Wallonia\": \"steelblue\",\n",
@@ -1378,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "986ee700",
    "metadata": {},
    "outputs": [
@@ -1426,7 +1422,7 @@
     "    marker=\"o\",\n",
     "    linewidth=2,\n",
     "    label=\"Median Price\",\n",
-    "    color=\"orange\"   # <-- requested color\n",
+    "    color=\"orange\"   \n",
     ")\n",
     "\n",
     "plt.title(\"Mean vs Median Price by Number of Facades\")\n",
@@ -1448,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "ace283ec",
    "metadata": {},
    "outputs": [
@@ -1473,7 +1469,7 @@
     "labels = [\"0–50\", \"50–100\", \"100–150\", \"150–200\",\n",
     "          \"200–300\", \"300–500\", \"500–1000\", \"1000+\"]\n",
     "\n",
-    "# Assign bin without warnings\n",
+    "# Assign bin \n",
     "df_clean.loc[:, \"living_area_bin\"] = pd.cut(\n",
     "    df_clean[\"living_area\"], bins=bins, labels=labels\n",
     ")\n",
@@ -1492,7 +1488,7 @@
     "ax = median_price_per_area_bin.plot(\n",
     "    kind=\"bar\",\n",
     "    edgecolor=\"black\",\n",
-    "    color=\"lightblue\"   # <-- requested color\n",
+    "    color=\"lightblue\"   \n",
     ")\n",
     "\n",
     "plt.title(\"Median Price by Living Area Category\")\n",
