--- a/analysis/Sandrine/test.ipynb
+++ b/analysis/Sandrine/test.ipynb
@@ -977,7 +977,7 @@
    "id": "172866ae",
    "metadata": {},
    "source": [
-    "Step 2 **was** performed by another team member"
+    "**Step 2 ******was****** performed by another team member**"
    ]
   },
   {
@@ -985,7 +985,7 @@
    "id": "7beb29f7",
    "metadata": {},
    "source": [
-    "Step 3 **:** Visualisation of the data (scatter plot, box plot, percentages)"
+    "**Step 3** **:** **Visualisation of the data (scatter plot, box plot, percentages)**"
    ]
   },
   {
